Various little changes to handle user auth

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "repositories": [
         {
             "type":"git",
-            "url":"/home/ct/authorizer"
+            "url":"https://github.com/Calculatietool/laravel-authorizer"
         }
     ],
     "require": {
